--- a/src/ListaZnajomych/css/FriendList.module.css
+++ b/src/ListaZnajomych/css/FriendList.module.css
@@ -2,7 +2,7 @@
   width: 200px;
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   flex-direction: row;
   border: none;
   border-radius: 10px;
